app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-web
  labels:
    app: demo-web
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
spec:
  rules:
    - host: demo.192.168.2.20.xip.io
      http:
        paths:
          - backend:
              serviceName: demo-web
              servicePort: 80
            path: /
